fix incorrect mapping

--- a/install_docker.yaml
+++ b/install_docker.yaml
@@ -1,8 +1,6 @@
 ---
-- name: Install Docker
+- name: Install Jenkins
   hosts: jenkins
-  vars:
-    docker_users: ["ubuntu"]
   become: yes
   roles:
     - geerlingguy.jenkins
