--- a/install_jenkins.yaml
+++ b/install_jenkins.yaml
@@ -1,6 +1,8 @@
 ---
 - name: Install Docker
-  hosts: jenkins
+  hosts: docker
+  vars:
+    docker_users: ["ubuntu"]
   become: yes
   roles:
     - geerlingguy.docker
