added missing java

--- a/install_jenkins.yaml
+++ b/install_jenkins.yaml
@@ -1,4 +1,9 @@
 ---
+- name: Install Java
+  hosts: jenkins
+  become: yes
+  roles:
+    - geerlingguy.java
 - name: Install Jenkins
   hosts: jenkins
   become: yes
