added prefix to playbook

--- a/install_jenkins.yaml
+++ b/install_jenkins.yaml
@@ -6,6 +6,8 @@
     - geerlingguy.java
 - name: Install Jenkins
   hosts: jenkins
+  vars:
+    jenkins_url_prefix: "/jenkins"
   become: yes
   roles:
     - geerlingguy.jenkins
